# internal/routers/user.go
@@ -16,7 +16,8 @@ func userRouter(group *gin.RouterGroup, h handler.UserHandler) {
 	//group.Use(middleware.Auth()) // all of the following routes use jwt authentication
 	// or group.Use(middleware.Auth(middleware.WithVerify(verify))) // token authentication
 
-	group.POST("/user", h.Create)
+	group.POST("/user/login", h.Login)
+	group.POST("/user/reg", h.Register)
 	group.DELETE("/user/:id", h.DeleteByID)
 	group.POST("/user/delete/ids", h.DeleteByIDs)
 	group.PUT("/user/:id", h.UpdateByID)
@@ -25,4 +26,5 @@ func userRouter(group *gin.RouterGroup, h handler.UserHandler) {
 	group.POST("/user/list/ids", h.ListByIDs)
 	group.GET("/user/list", h.ListByLastID)
 	group.POST("/user/list", h.List)
+
 }
